# GLSL-Hyper-Golfer

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  PROGRESS.md  README.md  ROADMAP.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  deploy-pages.yml  release.yml
fixtures/: constant_folding.glsl  dead_stores.glsl  numbers_and_ambiguity.glsl
rust-core/: Cargo.toml
rust-core/benches/: golf_bench.rs
rust-core/src/: aggressive.rs  callgraph.rs  expr.rs  golfer.rs  inline.rs  lexer.rs  lib.rs  vocab.rs
rust-core/tests/: fuzz_robustness.rs
scripts/: golf-progress-dashboard.mjs  golf-size-baseline.json  golf-size-budget.mjs  parity-test.mjs  wasm-check.mjs
web/: check-no-emoji-icons.mjs  e2e-test.mjs  eslint.config.js  index.html  package-lock.json  package.json  svgo.config.mjs  tsconfig.json
web/docs/: nightwire-moodboard.md
web/src/: editor.ts  glslLanguage.ts  golfer.ts  i18n.ts  main.ts  renderer.ts  style.css  wasmGolfer.ts
web/src/assets/: ICONS.md
web/src/wasm-pkg/: glsl_golf_core.d.ts  glsl_golf_core.js  glsl_golf_core_bg.wasm
